# tech_challenge_02

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/tech_challenge_02/: __init__.py  main.py
src/tech_challenge_02/controllers/: __init__.py  main_controller.py
tests/: test_main.py
